@@ -3,6 +3,12 @@ Orpie ChangeLog
 
 v1.1
 
+   2004-04-10        Added a check for inversion of ill-conditioned
+                     real matrices.
+
+                     Implemented Mutt-like rcfile macros.
+
+
    2004-04-09        Added a configuration variable to enable
                      hiding the help panel.
 
